# amt-protocol

./: .gitignore  Cargo.toml  Makefile  README.md  cbindgen.toml
.context/: codex-session-id
docs/: runbook-staging-e2e.md
docs/superpowers/plans/: 2026-05-15-amt-protocol-native-runtime.md
docs/superpowers/specs/: 2026-05-15-amt-protocol-native-runtime-design.md
include/: amt_protocol.h
src/: config.rs  constants.rs  driad.rs  error.rs  ffi.rs  gateway.rs  igmp.rs  jni.rs  lib.rs  messages.rs  mld.rs  platform.rs  wasm.rs
src/native/: gateway.rs  mod.rs  platform.rs  resolver.rs
src/subscription/: event.rs  group.rs  inner_packet.rs  mod.rs  report.rs
tests/: cli_json.rs  e2e_staging.rs  native_runtime.rs  watch_smoke.rs
tests/common/: fake_relay.rs  mod.rs
